--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="header-logo"><img class="logo-img" src="images/logo-min.png" alt="One Club Luxury Shopping Club"></div>
+      <div class="header-logo" id="logo"><img class="logo-img" src="images/logo-min.png" alt="One Club Luxury Shopping Club"></div>
       <div class="switcher"><a class="switcher__item icon icon--clock" href="#"><span>Акции</span></a><a class="switcher__item" href="#"><span>Каталог</span></a></div>
       <div class="contact-search">
         <div class="contact">
@@ -26,9 +26,9 @@
     </header>
     <main class="main">
       <nav class="breadcrumbs"><a class="breadcrumbs__item" href="#">Главная страница</a><span>/</span><a class="breadcrumbs__item" href="#">Каталог</a><span>/</span><a class="breadcrumbs__item" href="#">Категория 1</a><span>/</span><span class="breadcrumbs__item">Costa Patch Pocket Denim Top</span></nav>
-      <section class="product">
+      <section class="product" id="product">
         <div class="time-left icon icon--clock"><span class="time-left__text">До конца распродажи</span><span class="time-left__time">3 дня, 15:37:01</span></div>
-        <div class="photo"><img src="images/photo.jpg" alt="photo"></div>
+        <div class="photo"><img src="images/photo-min.jpg" alt="photo"></div>
         <div class="description">
           <h1 class="product__title">Current Elliott</h1>
           <h2 class="product__subtitle">Costa Patch Pocket Denim Top</h2>
@@ -69,56 +69,60 @@
           </div>
           <div class="details">
             <h3 class="details__title">Описание и детали</h3>
-            <p class="details__text"><span class="details__item">Состав:</span><span class="details__item-value">100% трикотаж</span><span class="details__item">Сезон:</span><span class="details__item-value">демисезон</span><span class="details__item">Детали:</span><span class="details__item-value">Облегающая модель выполнена из гладкого трикотажа.</span></p>
-            <p class="details__text"><span class="details__code">Код товара:</span><span class="details__code-number">1234-5678-8765-4321</span></p>
+            <div class="details__item"><span class="details__item-title">Состав:</span><span class="details__item-value">100% трикотаж</span></div>
+            <div class="details__item"><span class="details__item-title">Сезон:</span><span class="details__item-value">демисезон</span></div>
+            <div class="details__item"><span class="details__item-title">Детали:</span><span class="details__item-value">Облегающая модель выполнена из гладкого трико-тажа.</span></div>
+            <div class="details__code"><span class="details__code-title">Код товара:</span><span class="details__code-number">1234-5678-8765-4321</span></div>
           </div>
           <div class="details">
             <h3 class="details__title">Измерения</h3>
-            <p class="details__text"><span class="details__item">Размер вещи на фото:</span><span class="details__item-value">S</span></p>
-            <p class="details__text"><span class="details__text-item">Обхват груди: 85 см</span><span class="details__text-item">Обхват талии: 61 см</span><span class="details__text-item">Обхват бедер: 89 см</span><span class="details__text-item">Рост: 175 см</span></p>
-            <p class="details__text"><span class="details__text--important">Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, <a href="#">таблицей размеров</a>,или обратитесь к нашему консультанту</span></p>
+            <div class="details__item"><span class="details__item-title">Размер вещи на фото:</span><span class="details__item-value">S</span></div>
+            <div class="details__info">
+              <p class="details__text">Обхват груди: 85 см</p>
+              <p class="details__text">Обхват талии: 61 см</p>
+              <p class="details__text">Обхват бедер: 89 см</p>
+              <p class="details__text">Рост: 175 см</p>
+            </div>
+            <p class="details__text details__text--important">Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, <a href="#">таблицей размеров</a>, или обратитесь к нашему консультанту</p>
           </div>
           <div class="details">
             <h3 class="details__title">Доставка и возврат</h3>
-            <p class="details__text"><span class="details__item">Ожидаемая дата доставки:</span><span class="details__item-value">21.09.2016 - 23.09.2016</span></p>
+            <div class="details__item"><span class="details__item-title">Ожидаемая дата доставки:</span><span class="details__item-value">21.09.2016 - 23.09.2016</span></div>
             <p class="details__text details__text--important">Бесплатная доставка при заказе от 2000 грн, а также при оплате банковской картой.</p>
             <p class="details__text details__text--important">Вы можете выбрать любой удобный способ доставки:</p>
             <p class="details__text"><span class="details__text-item">1. Самовывоз из наших бутиков в Киеве (адрес выбирается в момент оформления заказа) - бесплатно.</span><span class="details__text-item">2. Курьером по Киеву.</span><span class="details__text-item">3. Сервисом доставки "Нова пошта" по всей Украине.</span></p>
             <p class="details__text details__text--important">Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.</p>
           </div>
-          <div class="social"><span class="social__text">Поделиться</span>
-            <div class="social__item icon icon--facebook"></div>
-            <div class="social__item icon icon--vk"></div>
-            <div class="social__item icon icon--google-plus"></div>
-            <div class="social__item icon icon--twitter"></div>
-          </div>
+          <div class="social"><span class="social__text">Поделиться</span><a class="social__item icon icon--facebook" href="#"></a><a class="social__item icon icon--vk" href="#"></a><a class="social__item icon icon--google-plus" href="#"></a><a class="social__item icon icon--twitter" href="#"></a></div>
         </div>
       </section>
       <section class="similar-goods">
         <h2 class="similar-goods__title">Похожие товары</h2>
-        <div class="item">
-          <div class="item__img"><img class="item__img-image" src="" alt="item-img"></div>
-          <h3 class="item__title">Tanya Taylor</h3>
-          <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
-          <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
-        </div>
-        <div class="item">
-          <div class="item__img"><img class="item__img-image" src="" alt="item-img"></div>
-          <h3 class="item__title">Tanya Taylor</h3>
-          <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
-          <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
-        </div>
-        <div class="item">
-          <div class="item__img"><img class="item__img-image" src="" alt="item-img"></div>
-          <h3 class="item__title">Tanya Taylor</h3>
-          <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
-          <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
-        </div>
-        <div class="item">
-          <div class="item__img"><img class="item__img-image" src="" alt="item-img"></div>
-          <h3 class="item__title">Tanya Taylor</h3>
-          <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
-          <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+        <div class="similar-goods__block">
+          <div class="item">
+            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
+            <h3 class="item__title">Tanya Taylor</h3>
+            <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
+            <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+          </div>
+          <div class="item">
+            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
+            <h3 class="item__title">Tanya Taylor</h3>
+            <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
+            <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+          </div>
+          <div class="item">
+            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
+            <h3 class="item__title">Tanya Taylor</h3>
+            <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
+            <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+          </div>
+          <div class="item">
+            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
+            <h3 class="item__title">Tanya Taylor</h3>
+            <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
+            <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+          </div>
         </div>
       </section>
       <section class="see-other"><span class="see-other__text">Смотрите также:</span><a class="see-other__link" href="#">Одежда</a><a class="see-other__link" href="#">Трикотаж</a><a class="see-other__link" href="#">Шелк</a><a class="see-other__link" href="#">Все товары бренда Philipp Plein</a></section>
@@ -129,33 +133,29 @@
         </div>
         <div class="benefits__item">
           <h3 class="benefits__item-title">Доставка</h3>
-          <p class="benefits__item-text">Вы можете примерить вещи в одном из наших<a href="#">бутиков</a>или заказать доставку по любому удобному адресу.</p>
+          <p class="benefits__item-text">Вы можете примерить вещи в одном из наших<a class="benefits__item-link" href="#">бутиков</a>или заказать доставку по любому удобному адресу.</p>
         </div>
         <div class="benefits__item">
           <h3 class="benefits__item-title">Помощь</h3>
-          <p class="benefits__item-text">Время работы службы поддержки: ежедневно с 10:00 до 21:00. +38 044 359-08-99, +38 095 458-98-46</p>
+          <p class="benefits__item-text">Время работы службы поддержки: ежедневно с 10:00 до 21:00. <span>+38 044 359-08-99, +38 095 458-98-46</span></p>
         </div>
-        <div class="to-top"></div>
-      </section>
+      </section><a class="to-top" href="#logo"></a>
     </main>
     <footer class="footer">
       <nav class="footer__main-menu"><span class="footer__main-menu-item">Каталог</span><a class="footer__main-menu-item" href="#">Женщинам</a><a class="footer__main-menu-item" href="#">Мужчинам</a><a class="footer__main-menu-item" href="#">Детям</a><a class="footer__main-menu-item" href="#">Для дома</a><a class="footer__main-menu-item" href="#">Бренды</a></nav>
       <nav class="footer__buyer-menu"><span class="footer__buyer-menu-item">Покупателям</span><a class="footer__buyer-menu-item" href="#">Оплата</a><a class="footer__buyer-menu-item" href="#">Возврат</a><a class="footer__buyer-menu-item" href="#">Доставка</a><a class="footer__buyer-menu-item" href="#">Оферта</a><a class="footer__buyer-menu-item" href="#">Поддержка</a></nav>
       <nav class="footer__about-menu"><span class="footer__about-menu-item">О нас</span><a class="footer__about-menu-item" href="#">О проекте</a><a class="footer__about-menu-item" href="#">Вакансии</a><a class="footer__about-menu-item" href="#">Партнерам</a><a class="footer__about-menu-item" href="#">Контакты</a><a class="footer__about-menu-item" href="#">FAQ</a></nav>
-      <nav class="copy">
-        <div class="footer-logo"><img class="logo-img" src="" alt="logo"></div><span class="copy-text">&copy; 2016 ONE CLUB 2.0</span><span class="copy-text">All Right reserved</span>
-        <div class="footer-social">
-          <div class="footer-social__item icon icon--facebook"></div>
-          <div class="footer-social__item icon icon--instagram"></div>
-          <div class="footer-social__item icon icon--twitter"></div>
-          <div class="footer-social__item icon icon--pinterest"></div>
+      <div class="copy">
+        <div class="footer-logo"><img class="logo-img" src="images/logo-footer-min.png" alt="logo"></div><span class="copy-text">&copy; 2016 ONE CLUB 2.0</span><span class="copy-text">All Right reserved</span>
+        <div class="footer-social-credit">
+          <div class="footer-social"><a class="footer-social__item icon icon--facebook" href="#"></a><a class="footer-social__item icon icon--instagram" href="#"></a><a class="footer-social__item icon icon--twitter" href="#"></a><a class="footer-social__item icon icon--pinterest" href="#"></a></div>
+          <div class="credit">
+            <div class="credit__item"><img class="credit__visa-img" src="images/visa-min.png" alt="visa"></div>
+            <div class="credit__item"><img class="credit__master-card-img" src="images/master-card-min.png" alt="master-card"></div>
+            <div class="credit__item"><img class="credit__liqpay-img" src="images/liqpay-min.png" alt="liqpay"></div>
+          </div>
         </div>
-        <div class="credit">
-          <div class="visa"></div>
-          <div class="master-card"></div>
-          <div class="liqpay"></div>
-        </div>
-      </nav>
+      </div>
     </footer>
   </body>
 </html>
