edit some styles to tablet

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Card</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -28,7 +28,7 @@
       <nav class="breadcrumbs"><a class="breadcrumbs__item" href="#">Главная страница</a><span>/</span><a class="breadcrumbs__item" href="#">Каталог</a><span>/</span><a class="breadcrumbs__item" href="#">Категория 1</a><span>/</span><span class="breadcrumbs__item">Costa Patch Pocket Denim Top</span></nav>
       <section class="product" id="product">
         <div class="time-left icon icon--clock"><span class="time-left__text">До конца распродажи</span><span class="time-left__time">3 дня, 15:37:01</span></div>
-        <div class="photo"><img src="images/photo-min.jpg" alt="photo"></div>
+        <div class="photo"></div>
         <div class="description">
           <h1 class="product__title">Current Elliott</h1>
           <h2 class="product__subtitle">Costa Patch Pocket Denim Top</h2>
