edit tablet version

--- a/index.html
+++ b/index.html
@@ -105,25 +105,25 @@
             <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
             <h3 class="item__title">Tanya Taylor</h3>
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
-            <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+            <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
           </div>
           <div class="item">
             <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
             <h3 class="item__title">Tanya Taylor</h3>
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
-            <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+            <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
           </div>
           <div class="item">
             <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
             <h3 class="item__title">Tanya Taylor</h3>
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
-            <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+            <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
           </div>
           <div class="item">
             <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
             <h3 class="item__title">Tanya Taylor</h3>
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
-            <div class="item__price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+            <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
           </div>
         </div>
       </section>
