added some mobile styles

--- a/mobile.html
+++ b/mobile.html
@@ -31,7 +31,10 @@
         <div class="description">
           <h1 class="product__title">Current Elliott</h1>
           <h2 class="product__subtitle">Costa Patch Pocket Denim Top</h2>
-          <div class="price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+          <div class="price">
+            <div class="price__number"><span class="price__number price--old">30 000 грн</span><span class="price__number price--new">15 000 грн</span></div>
+            <div class="price__sale">-50%</div>
+          </div>
           <div class="color"><span class="color__text">Цвет: </span><span class="color__name">Синий</span>
             <div class="colors">
               <div class="color__pic color--1"></div>
@@ -57,13 +60,13 @@
               <div class="quantity__count-number">1</div>
               <div class="quantity__count-more"></div>
             </div>
-            <div class="like icon icon--heart"> <span>В избранное </span></div>
+            <div class="like icon icon--heart"> </div>
             <div class="add-to-cart"> <span class="add-to-cart__text">Добавить в корзину</span>
               <div class="quantity__left">Осталось в наличии: <span class="quantity__left-number">1 шт.</span>Спешите купить сейчас!</div>
             </div>
           </div>
           <div class="make-order">
-            <div class="call icon icon--phone"><span class="call__text">Оформить заказ по телефону</span><a class="call__number" href="tel: +380954589846">+38 095 458-98-46</a><span class="call__number-text">или</span><a class="call__number" href="tel: +380443590899">+38 044 359-08-99</a></div>
+            <div class="call icon icon--phone"><span class="call__text">Оформить заказ по телефону</span><a class="call__number" href="tel: +380954589846">+38 095 458-98-46</a><a class="call__number" href="tel: +380443590899">+38 044 359-08-99</a></div>
             <div class="location icon icon--location-pin"><a class="location__text" href="#">Наличие в бутиках ONE CLUB</a></div>
           </div>
           <div class="details">
@@ -91,9 +94,6 @@
             <p class="details__text details__text--important">Вы можете выбрать любой удобный способ доставки:</p>
             <p class="details__text"><span class="details__text-item">1. Самовывоз из наших бутиков в Киеве (адрес выбирается в момент оформления заказа) - бесплатно.</span><span class="details__text-item">2. Курьером по Киеву.</span><span class="details__text-item">3. Сервисом доставки "Нова пошта" по всей Украине.</span></p>
             <p class="details__text details__text--important">Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.</p>
-          </div>
-          <div class="social"><span class="social__text">Поделиться</span>
-            <div class="social-links"><a class="social__item icon icon--facebook" href="#"></a><a class="social__item icon icon--vk" href="#"></a><a class="social__item icon icon--google-plus" href="#"></a><a class="social__item icon icon--twitter" href="#"></a></div>
           </div>
         </div>
       </section>
@@ -124,6 +124,9 @@
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
             <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
           </div>
+        </div>
+        <div class="social"><span class="social__text">Поделиться</span>
+          <div class="social-links"><a class="social__item icon icon--facebook" href="#"></a><a class="social__item icon icon--vk" href="#"></a><a class="social__item icon icon--google-plus" href="#"></a><a class="social__item icon icon--twitter" href="#"></a></div>
         </div>
       </section>
       <section class="see-other"><span class="see-other__text">Смотрите также:</span><a class="see-other__link" href="#">Одежда</a><a class="see-other__link" href="#">Трикотаж</a><a class="see-other__link" href="#">Шелк</a><a class="see-other__link" href="#">Все товары бренда Philipp Plein</a></section>
