--- a/mobile.html
+++ b/mobile.html
@@ -101,25 +101,25 @@
         <h2 class="similar-goods__title">Похожие товары</h2>
         <div class="similar-goods__block">
           <div class="item">
-            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
+            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item1-min.jpg" alt="item-img"></a></div>
             <h3 class="item__title">Tanya Taylor</h3>
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
             <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
           </div>
           <div class="item">
-            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
+            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item2-min.jpg" alt="item-img"></a></div>
             <h3 class="item__title">Tanya Taylor</h3>
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
             <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
           </div>
           <div class="item">
-            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
+            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item3-min.jpg" alt="item-img"></a></div>
             <h3 class="item__title">Tanya Taylor</h3>
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
             <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
           </div>
           <div class="item">
-            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item-min.jpg" alt="item-img"></a></div>
+            <div class="item__img"><a href="#"><img class="item__img-image" src="images/item4-min.jpg" alt="item-img"></a></div>
             <h3 class="item__title">Tanya Taylor</h3>
             <h4 class="item__subtitle">Andy Striped Mini Skirt</h4>
             <div class="item__price"><span class="item__price price--old">30 000 грн</span><span class="item__price price--new">15 000 грн</span></div>
@@ -130,34 +130,15 @@
         </div>
       </section>
       <section class="see-other"><span class="see-other__text">Смотрите также:</span><a class="see-other__link" href="#">Одежда</a><a class="see-other__link" href="#">Трикотаж</a><a class="see-other__link" href="#">Шелк</a><a class="see-other__link" href="#">Все товары бренда Philipp Plein</a></section>
-      <section class="benefits">
-        <div class="benefits__item">
-          <h3 class="benefits__item-title">Ценность</h3>
-          <p class="benefits__item-text">Мы предлагаем подлинные качественные товары люксовых брендов по доступным ценам</p>
-        </div>
-        <div class="benefits__item">
-          <h3 class="benefits__item-title">Доставка</h3>
-          <p class="benefits__item-text">Вы можете примерить вещи в одном из наших<a class="benefits__item-link" href="#">бутиков</a>или заказать доставку по любому удобному адресу.</p>
-        </div>
-        <div class="benefits__item">
-          <h3 class="benefits__item-title">Помощь</h3>
-          <p class="benefits__item-text">Время работы службы поддержки: ежедневно с 10:00 до 21:00. <span>+38 044 359-08-99, +38 095 458-98-46</span></p>
-        </div>
-      </section><a class="to-top" href="#logo"></a>
     </main>
     <footer class="footer">
-      <nav class="footer__main-menu"><span class="footer__main-menu-item">Каталог</span><a class="footer__main-menu-item" href="#">Женщинам</a><a class="footer__main-menu-item" href="#">Мужчинам</a><a class="footer__main-menu-item" href="#">Детям</a><a class="footer__main-menu-item" href="#">Для дома</a><a class="footer__main-menu-item" href="#">Бренды</a></nav>
-      <nav class="footer__buyer-menu"><span class="footer__buyer-menu-item">Покупателям</span><a class="footer__buyer-menu-item" href="#">Оплата</a><a class="footer__buyer-menu-item" href="#">Возврат</a><a class="footer__buyer-menu-item" href="#">Доставка</a><a class="footer__buyer-menu-item" href="#">Оферта</a><a class="footer__buyer-menu-item" href="#">Поддержка</a></nav>
-      <nav class="footer__about-menu"><span class="footer__about-menu-item">О нас</span><a class="footer__about-menu-item" href="#">О проекте</a><a class="footer__about-menu-item" href="#">Вакансии</a><a class="footer__about-menu-item" href="#">Партнерам</a><a class="footer__about-menu-item" href="#">Контакты</a><a class="footer__about-menu-item" href="#">FAQ</a></nav>
-      <div class="copy">
-        <div class="footer-logo"><img class="logo-img" src="images/logo-footer-min.png" alt="logo"></div><span class="copy-text">&copy; 2016 ONE CLUB 2.0</span><span class="copy-text">All Right reserved</span>
-        <div class="footer-social-credit">
-          <div class="footer-social"><a class="footer-social__item icon icon--facebook" href="#"></a><a class="footer-social__item icon icon--instagram" href="#"></a><a class="footer-social__item icon icon--twitter" href="#"></a><a class="footer-social__item icon icon--pinterest" href="#"></a></div>
-          <div class="credit">
-            <div class="credit__item"><img class="credit__visa-img" src="images/visa-min.png" alt="visa"></div>
-            <div class="credit__item"><img class="credit__master-card-img" src="images/master-card-min.png" alt="master-card"></div>
-            <div class="credit__item"><img class="credit__liqpay-img" src="images/liqpay-min.png" alt="liqpay"></div>
-          </div>
+      <div class="footer-logo"><img class="logo-img" src="images/logo-footer-min.png" alt="logo"></div><span class="copy-text">&copy; 2016 ONE CLUB 2.0</span><span class="copy-text">All Right reserved</span>
+      <div class="footer-social-credit">
+        <div class="footer-social"><a class="footer-social__item icon icon--facebook" href="#"></a><a class="footer-social__item icon icon--instagram" href="#"></a><a class="footer-social__item icon icon--twitter" href="#"></a><a class="footer-social__item icon icon--pinterest" href="#"></a></div>
+        <div class="credit">
+          <div class="credit__item"><img class="credit__visa-img" src="images/visa-min.png" alt="visa"></div>
+          <div class="credit__item"><img class="credit__master-card-img" src="images/master-card-min.png" alt="master-card"></div>
+          <div class="credit__item"><img class="credit__liqpay-img" src="images/liqpay-min.png" alt="liqpay"></div>
         </div>
       </div>
     </footer>
