edit bug with mob menu

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
       <div class="go-to-mobile"><a class="mob-link" href="./mobile.html">Go to mob</a></div>
-      <div class="header-logo" id="logo"><img class="logo-img" src="images/logo-min.png" alt="One Club Luxury Shopping Club"></div>
+      <div class="header-logo" id="logo"><a href="#"><img class="logo-img" src="images/logo-min.png" alt="One Club Luxury Shopping Club"></a></div>
       <div class="switcher"><a class="switcher__item icon icon--clock" href="#"><span>Акции</span></a><a class="switcher__item" href="#"><span>Каталог</span></a></div>
       <div class="contact-search">
         <div class="contact">
