--- a/mobile.html
+++ b/mobile.html
@@ -20,7 +20,7 @@
           <li><a class="main-menu__item" href="#">Бренды</a></li>
         </ul>
       </nav>
-      <div class="header-logo" id="logo"><img class="logo-img" src="images/m-logo-min.png" alt="One Club Luxury Shopping Club"></div>
+      <div class="header-logo" id="logo"><a href="#"><img class="logo-img" src="images/m-logo-min.png" alt="One Club Luxury Shopping Club"></a></div>
       <div class="shop"><a href="#"><img class="shop-img" src="images/mob-shop-bag.png" alt="go shop"></a></div>
     </header>
     <div class="switcher"><a class="switcher__item icon icon--clock" href="#"><span>Акции</span></a><a class="switcher__item" href="#"><span>Каталог</span></a></div>
