--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Card</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -10,29 +10,23 @@
   <body>
     <header class="header">
       <div class="go-to-mobile"><a class="mob-link" href="./mobile.html">Go to mob</a></div>
-      <div class="header-logo" id="logo"><a href="#"><img class="logo-img" src="images/logo-min.png" alt="One Club Luxury Shopping Club"></a></div>
+      <div class="header-logo" id="logo"><a href="#">One CLub</a></div>
       <div class="switcher"><a class="switcher__item icon icon--clock" href="#"><span>Акции</span></a><a class="switcher__item" href="#"><span>Каталог</span></a></div>
       <div class="contact-search">
-        <div class="contact">
-          <div class="phone icon icon--phone icon--contact"><a class="contact__link" href="tel: +380443590899">+380 44 359-08-99</a><span>Пн-Вс: 9:00-21:00</span></div>
-          <div class="login icon icon--avatar icon--contact"><a class="contact__link" href="#">Войти</a></div>
-          <div class="basket icon icon--shopping-cart icon--contact"><a class="contact__link" href="#">Корзина</a></div>
-        </div>
-        <div class="search">
+        <div class="contact"><a class="phone icon icon--phone icon--contact" href="tel: +380443590899"><span class="contact__link">+380 44 359-08-99</span><span>Пн-Вс: 9:00-21:00</span></a><a class="login icon icon--avatar icon--contact" href="#"><span class="contact__link">Войти</span></a><a class="basket icon icon--shopping-cart icon--contact" href="#"><span class="contact__link">Корзина</span></a></div>
+        <form class="search" action="#">
           <input class="search__input" type="search" placeholder="Поиск...">
-          <div class="search-icon"></div>
-        </div>
+          <button class="search-icon" type="submit"></button>
+        </form>
       </div>
       <nav class="main-menu"><a class="main-menu__item" href="#">Женщинам</a><a class="main-menu__item" href="#">Мужчинам</a><a class="main-menu__item" href="#">Детям</a><a class="main-menu__item" href="#">Косметика</a><a class="main-menu__item" href="#">Для дома</a><a class="main-menu__item" href="#">Бренды</a></nav>
     </header>
     <main class="main">
       <nav class="breadcrumbs"><a class="breadcrumbs__item" href="#">Главная страница</a><span>/</span><a class="breadcrumbs__item" href="#">Каталог</a><span>/</span><a class="breadcrumbs__item" href="#">Категория 1</a><span>/</span><span class="breadcrumbs__item">Costa Patch Pocket Denim Top</span></nav>
       <section class="product" id="product">
-        <div class="time-left icon icon--clock"><span class="time-left__text">До конца распродажи</span><span class="time-left__time">3 дня, 15:37:01</span></div>
-        <div class="photo"></div>
+        <div class="time-left icon icon--clock"><span class="time-left__text">До конца распродажи</span><span class="time-left__time">3 дня, 15:37:01</span></div><a class="photo" href="http://placehold.it"><img src="http://placehold.it/446x655"></a>
         <div class="description">
-          <h1 class="product__title">Current Elliott</h1>
-          <h2 class="product__subtitle">Costa Patch Pocket Denim Top</h2>
+          <h1 class="product__title">Current Elliott<span class="product__subtitle">Costa Patch Pocket Denim Top</span></h1>
           <div class="price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
           <div class="color"><span class="color__text">Цвет: </span><span class="color__name">Синий</span>
             <div class="colors">
@@ -56,7 +50,7 @@
           <div class="quantity"><span class="quantity__text">Количество:</span>
             <div class="quantity__count">
               <div class="quantity__count-less"></div>
-              <input class="quantity__count-number" type="text" value="1">
+              <input class="quantity__count-number" type="tel" value="1">
               <div class="quantity__count-more"></div>
             </div><a class="like icon icon--heart" href="#"> <span>В избранное </span></a><a class="add-to-cart" href="#"> <span class="add-to-cart__text">Добавить в корзину</span>
               <div class="quantity__left">Осталось в наличии: <span class="quantity__left-number">1 шт.</span>Спешите купить сейчас!</div></a>
@@ -67,29 +61,37 @@
           </div>
           <div class="details">
             <h3 class="details__title">Описание и детали</h3>
-            <div class="details__item"><span class="details__item-title">Состав:</span><span class="details__item-value">100% трикотаж</span></div>
-            <div class="details__item"><span class="details__item-title">Сезон:</span><span class="details__item-value">демисезон</span></div>
-            <div class="details__item"><span class="details__item-title">Детали:</span><span class="details__item-value">Облегающая модель выполнена из гладкого трико-тажа.</span></div>
-            <div class="details__code"><span class="details__code-title">Код товара:</span><span class="details__code-number">1234-5678-8765-4321</span></div>
+            <dl class="details__item">
+              <dt class="details__item-title">Состав:</dt>
+              <dd class="details__item-value">100% трикотаж</dd>
+              <dt class="details__item-title">Сезон:</dt>
+              <dd class="details__item-value">демисезон</dd>
+              <dt class="details__item-title">Детали:</dt>
+              <dd class="details__item-value">Облегающая модель выполнена из гладкого трикотажа.</dd>
+            </dl>
+            <dl class="details__code">
+              <dt class="details__code-title">Код товара:</dt>
+              <dd class="details__code-number">1234-5678-8765-4321</dd>
+            </dl>
           </div>
           <div class="details">
             <h3 class="details__title">Измерения</h3>
-            <div class="details__item"><span class="details__item-title">Размер вещи на фото:</span><span class="details__item-value">S</span></div>
+            <div class="details__item"><b>Размер вещи на фото:</b>S</div>
             <div class="details__info">
               <p class="details__text">Обхват груди: 85 см</p>
               <p class="details__text">Обхват талии: 61 см</p>
               <p class="details__text">Обхват бедер: 89 см</p>
               <p class="details__text">Рост: 175 см</p>
             </div>
-            <p class="details__text details__text--important">Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, <a href="#">таблицей размеров</a>, или обратитесь к нашему консультанту</p>
+            <p class="details__text"> <b>Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, <a href="#">таблицей размеров</a>, или обратитесь к нашему консультанту</b></p>
           </div>
           <div class="details">
             <h3 class="details__title">Доставка и возврат</h3>
-            <div class="details__item"><span class="details__item-title">Ожидаемая дата доставки:</span><span class="details__item-value">21.09.2016 - 23.09.2016</span></div>
-            <p class="details__text details__text--important">Бесплатная доставка при заказе от 2000 грн, а также при оплате банковской картой.</p>
-            <p class="details__text details__text--important">Вы можете выбрать любой удобный способ доставки:</p>
+            <div class="details__item"><b>Ожидаемая дата доставки:</b>21.09.2016 - 23.09.2016</div>
+            <p class="details__text"> <b>Бесплатная доставка при заказе от 2000 грн, а также при оплате банковской картой.</b></p>
+            <p class="details__text"> <b>Вы можете выбрать любой удобный способ доставки:</b></p>
             <p class="details__text"><span class="details__text-item">1. Самовывоз из наших бутиков в Киеве (адрес выбирается в момент оформления заказа) - бесплатно.</span><span class="details__text-item">2. Курьером по Киеву.</span><span class="details__text-item">3. Сервисом доставки "Нова пошта" по всей Украине.</span></p>
-            <p class="details__text details__text--important">Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.</p>
+            <p class="details__text"> <b>Если товар не подошел, Вы можете вернуть его в течение 14 дней с момента получения.</b></p>
           </div>
           <div class="social"><span class="social__text">Поделиться</span>
             <div class="social-links"><a class="social__item icon icon--facebook" href="#"></a><a class="social__item icon icon--vk" href="#"></a><a class="social__item icon icon--google-plus" href="#"></a><a class="social__item icon icon--twitter" href="#"></a></div>
@@ -125,7 +127,7 @@
           </div>
         </div>
       </section>
-      <section class="see-other"><span class="see-other__text">Смотрите также:</span><a class="see-other__link" href="#">Одежда</a><a class="see-other__link" href="#">Трикотаж</a><a class="see-other__link" href="#">Шелк</a><a class="see-other__link" href="#">Все товары бренда Philipp Plein</a></section>
+      <section class="recommendation"><span class="recommendation__text">Смотрите также:</span><a class="recommendation__link" href="#">Одежда</a><a class="recommendation__link" href="#">Трикотаж</a><a class="recommendation__link" href="#">Шелк</a><a class="recommendation__link" href="#">Все товары бренда Philipp Plein</a></section>
       <section class="benefits">
         <div class="benefits__item">
           <h3 class="benefits__item-title">Ценность</h3>
@@ -137,7 +139,7 @@
         </div>
         <div class="benefits__item">
           <h3 class="benefits__item-title">Помощь</h3>
-          <p class="benefits__item-text">Время работы службы поддержки: ежедневно с 10:00 до 21:00. <span>+38 044 359-08-99, +38 095 458-98-46</span></p>
+          <p class="benefits__item-text">Время работы службы поддержки: ежедневно с 10:00 до 21:00.<br><a class="benefits__item-link" href="tel: +380443590899">+38 044 359-08-99,</a><a class="benefits__item-link" href="tel: +380954589846">+38 095 458-98-46</a></p>
         </div>
       </section><a class="to-top" href="#logo"></a>
     </main>
@@ -146,14 +148,10 @@
       <nav class="footer__buyer-menu"><span class="footer__buyer-menu-item">Покупателям</span><a class="footer__buyer-menu-item" href="#">Оплата</a><a class="footer__buyer-menu-item" href="#">Возврат</a><a class="footer__buyer-menu-item" href="#">Доставка</a><a class="footer__buyer-menu-item" href="#">Оферта</a><a class="footer__buyer-menu-item" href="#">Поддержка</a></nav>
       <nav class="footer__about-menu"><span class="footer__about-menu-item">О нас</span><a class="footer__about-menu-item" href="#">О проекте</a><a class="footer__about-menu-item" href="#">Вакансии</a><a class="footer__about-menu-item" href="#">Партнерам</a><a class="footer__about-menu-item" href="#">Контакты</a><a class="footer__about-menu-item" href="#">FAQ</a></nav>
       <div class="copy">
-        <div class="footer-logo"><a href="#"><img class="logo-img" src="images/logo-footer-min.png" alt="logo"></a></div><span class="copy-text">&copy; 2016 ONE CLUB 2.0</span><span class="copy-text">All Right reserved</span>
+        <div class="footer-logo"><a href="#">One Club</a></div><span class="copy-text">&copy; 2016 ONE CLUB 2.0</span><span class="copy-text">All Right reserved</span>
         <div class="footer-social-credit">
           <div class="footer-social"><a class="footer-social__item icon icon--facebook" href="#"></a><a class="footer-social__item icon icon--instagram" href="#"></a><a class="footer-social__item icon icon--twitter" href="#"></a><a class="footer-social__item icon icon--pinterest" href="#"></a></div>
-          <div class="credit">
-            <div class="credit__item"><img class="credit__visa-img" src="images/visa-min.png" alt="visa"></div>
-            <div class="credit__item"><img class="credit__master-card-img" src="images/master-card-min.png" alt="master-card"></div>
-            <div class="credit__item"><img class="credit__liqpay-img" src="images/liqpay-min.png" alt="liqpay"></div>
-          </div>
+          <div class="credit"><img class="credit__img" src="images/credit-min.png" alt="credit"></div>
         </div>
       </div>
     </footer>
