--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="location icon icon--location-pin"><a class="location__text" href="#">Наличие в бутиках ONE CLUB</a></div>
           </div>
           <div class="details">
-            <h3 class="details__title">Описание и детали</h3>
+            <h3 class="details__title icon icon--minus"> <span>Описание и детали</span></h3>
             <dl class="details__item">
               <dt class="details__item-title">Состав:</dt>
               <dd class="details__item-value">100% трикотаж</dd>
@@ -75,7 +75,7 @@
             </dl>
           </div>
           <div class="details">
-            <h3 class="details__title">Измерения</h3>
+            <h3 class="details__title icon icon--minus"> <span>Измерения</span></h3>
             <div class="details__item"><b>Размер вещи на фото:</b>S</div>
             <div class="details__info">
               <p class="details__text">Обхват груди: 85 см</p>
@@ -86,7 +86,7 @@
             <p class="details__text"> <b>Чтобы выбрать подходящий размер, воспользуйтесь онлайн-примерочной, <a href="#">таблицей размеров</a>, или обратитесь к нашему консультанту</b></p>
           </div>
           <div class="details">
-            <h3 class="details__title">Доставка и возврат</h3>
+            <h3 class="details__title icon icon--minus"> <span>Доставка и возврат</span></h3>
             <div class="details__item"><b>Ожидаемая дата доставки:</b>21.09.2016 - 23.09.2016</div>
             <p class="details__text"> <b>Бесплатная доставка при заказе от 2000 грн, а также при оплате банковской картой.</b></p>
             <p class="details__text"> <b>Вы можете выбрать любой удобный способ доставки:</b></p>
