added some styles to photo

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
     <main class="main">
       <nav class="breadcrumbs"><a class="breadcrumbs__item" href="#">Главная страница</a><span>/</span><a class="breadcrumbs__item" href="#">Каталог</a><span>/</span><a class="breadcrumbs__item" href="#">Категория 1</a><span>/</span><span class="breadcrumbs__item">Costa Patch Pocket Denim Top</span></nav>
       <section class="product" id="product">
-        <div class="time-left icon icon--clock"><span class="time-left__text">До конца распродажи</span><span class="time-left__time">3 дня, 15:37:01</span></div><a class="photo" href="http://placehold.it"><img src="http://placehold.it/446x655"></a>
+        <div class="time-left icon icon--clock"><span class="time-left__text">До конца распродажи</span><span class="time-left__time">3 дня, 15:37:01</span></div>
+        <div class="photo">
+          <div class="photo__nav">
+            <div class="prev"></div><a class="photo__nav-item active" href="#"><img class="photo__nav-item-jpg" src="images/photo1-min.jpg" alt="photo1"></a><a class="photo__nav-item" href="#"><img class="photo__nav-item-jpg" src="images/photo2-min.jpg" alt="photo2"></a><a class="photo__nav-item" href="#"><img class="photo__nav-item-jpg" src="images/photo3-min.jpg" alt="photo3"></a><a class="photo__nav-item" href="#"><img class="photo__nav-item-jpg" src="images/photo4-min.jpg" alt="photo4"></a>
+            <div class="next"></div>
+          </div>
+          <div class="photo__view"></div>
+        </div>
         <div class="description">
           <h1 class="product__title">Current Elliott<span class="product__subtitle">Costa Patch Pocket Denim Top</span></h1>
           <div class="price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
