--- a/mobile.html
+++ b/mobile.html
@@ -26,7 +26,11 @@
     <div class="switcher"><a class="switcher__item icon icon--clock" href="#"><span>Акции</span></a><a class="switcher__item" href="#"><span>Каталог</span></a></div>
     <main class="main">
       <nav class="breadcrumbs"><a class="breadcrumbs__item" href="#">Главная страница</a><span>/</span><a class="breadcrumbs__item" href="#">Каталог</a><span>/</span><a class="breadcrumbs__item" href="#">Категория 1</a><span>/</span><span class="breadcrumbs__item">Costa Patch Pocket Denim Top</span></nav>
-      <section class="product" id="product"><a class="photo" href="http://placehold.it"><img src="http://placehold.it/260x374"></a>
+      <section class="product" id="product">
+        <div class="photo">
+          <div class="photo__nav"><a class="photo__nav-item active" href="#"></a><a class="photo__nav-item" href="#"></a><a class="photo__nav-item" href="#"></a><a class="photo__nav-item" href="#"></a></div>
+          <div class="photo__view"></div>
+        </div>
         <div class="description">
           <h1 class="product__title">Current Elliott<span class="product__subtitle">Costa Patch Pocket Denim Top</span></h1>
           <div class="price">
