added smth like slider

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
         <div class="time-left icon icon--clock"><span class="time-left__text">До конца распродажи</span><span class="time-left__time">3 дня, 15:37:01</span></div>
         <div class="photo">
           <div class="photo__nav">
-            <div class="prev"></div><a class="photo__nav-item active" href="#"><img class="photo__nav-item-jpg" src="images/photo1-min.jpg" alt="photo1"></a><a class="photo__nav-item" href="#"><img class="photo__nav-item-jpg" src="images/photo2-min.jpg" alt="photo2"></a><a class="photo__nav-item" href="#"><img class="photo__nav-item-jpg" src="images/photo3-min.jpg" alt="photo3"></a><a class="photo__nav-item" href="#"><img class="photo__nav-item-jpg" src="images/photo4-min.jpg" alt="photo4"></a>
+            <div class="prev"></div><a class="photo__nav-item nav-item--1 active" href="javascript:l_image ('images/photo1-min.jpg')"></a><a class="photo__nav-item nav-item--2" href="javascript:l_image ('images/photo2-min.jpg')"></a><a class="photo__nav-item nav-item--3" href="javascript:l_image ('images/photo3-min.jpg')"></a><a class="photo__nav-item nav-item--4" href="javascript:l_image ('images/photo4-min.jpg')"></a>
             <div class="next"></div>
           </div>
-          <div class="photo__view"></div>
+          <div class="photo__view"><img class="photo__view-img" src="images/photo1-min.jpg" name="example_img"></div>
         </div>
         <div class="description">
           <h1 class="product__title">Current Elliott<span class="product__subtitle">Costa Patch Pocket Denim Top</span></h1>
