--- a/mobile.html
+++ b/mobile.html
@@ -28,8 +28,8 @@
       <nav class="breadcrumbs"><a class="breadcrumbs__item" href="#">Главная страница</a><span>/</span><a class="breadcrumbs__item" href="#">Каталог</a><span>/</span><a class="breadcrumbs__item" href="#">Категория 1</a><span>/</span><span class="breadcrumbs__item">Costa Patch Pocket Denim Top</span></nav>
       <section class="product" id="product">
         <div class="photo">
-          <div class="photo__nav"><a class="photo__nav-item active" href="#"></a><a class="photo__nav-item" href="#"></a><a class="photo__nav-item" href="#"></a><a class="photo__nav-item" href="#"></a></div>
-          <div class="photo__view"></div>
+          <div class="photo__nav"><a class="photo__nav-item nav-item--1 active" href="javascript:l_image ('images/photo1-min.jpg')"></a><a class="photo__nav-item nav-item--2" href="javascript:l_image ('images/photo2-min.jpg')"></a><a class="photo__nav-item nav-item--3" href="javascript:l_image ('images/photo3-min.jpg')"></a><a class="photo__nav-item nav-item--4" href="javascript:l_image ('images/photo4-min.jpg')"></a></div>
+          <div class="photo__view"><img class="photo__view-img" src="images/photo1-min.jpg" name="example_img"></div>
         </div>
         <div class="description">
           <h1 class="product__title">Current Elliott<span class="product__subtitle">Costa Patch Pocket Denim Top</span></h1>
